# xhidecursor

./: COPYING  Makefile.am  README  configure.ac  xhidecursor.c
